--- a/admin.html
+++ b/admin.html
@@ -4,11 +4,12 @@
 	<meta charset="utf-8">
 	<title>Administración | OPComponentes</title>
 
-	<link href='../css/mb.containerPlus.css' rel='stylesheet' type='text/css'>
-	<link href="../css/bootstrap.min.css" rel="stylesheet">
-	<link href="../css/main.css" rel="stylesheet">
-	
-	<link rel="shortcut icon" href="../images/home/logo.png">
+	<link href='css/mb.containerPlus.css' rel='stylesheet' type='text/css'>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+
+	<link rel="shortcut icon" href="images/home/logo.png">
 </head>
 <body>
 	<div class="container" style="margin-top: 40px">
@@ -18,29 +19,29 @@
 				<div class="panel-group category-products" id="accordian">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h4 class="panel-title"><a href="#" onclick="openContainer('Catalogo')">Catálogo</a></h4>
+							<h4 class="panel-title"><a href="#" onclick="openContainer('Catalogo');cargaCatalago();">Catálogo</a></h4>
 						</div>
 					</div>
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h4 class="panel-title"><a href="#" onclick="openContainer('Productos')">Productos</a></h4>
+							<h4 class="panel-title"><a href="#" onclick="openContainer('Productos');cargaProductos();">Productos</a></h4>
 						</div>
 					</div>
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h4 class="panel-title"><a href="#" onclick="openContainer('Promociones')">Promociones</a></h4>
+							<h4 class="panel-title"><a href="#" onclick="openContainer('Promociones');cargaPromociones();">Promociones</a></h4>
 						</div>
 					</div>
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h4 class="panel-title"><a href="#" onclick="openContainer('Proveedores')">Proveedores</a></h4>
+							<h4 class="panel-title"><a href="#" onclick="openContainer('Proveedores');cargaProveedores();">Proveedores</a></h4>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-9">
 				<br><br><br>
-				<center><img src="../images/home/logo.png"  height="70" alt="" /></center>
+				<center><img src="images/home/logo.png"  height="70" alt="" /></center>
 			</div>
 		</div>
 	</div>
@@ -126,13 +127,13 @@
 		</div>
 	</div>
 	<!-- Javascript scripts -->
-	<script type="text/javascript" src="../js/jquery.js"></script>
-	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	
-	<script type="text/javascript" src="../js/jquery-ui.min.js"></script>
-	<script src="../js/jquery.mb.containerPlus.js"></script>
-	<script src="../js/mb.containerPlus.plugins.js"></script>
+	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
+	<script src="js/jquery.mb.containerPlus.js"></script>
+	<script src="js/mb.containerPlus.plugins.js"></script>
 
-	<script type="text/javascript" src="../js/admin.js"></script>
+	<script type="text/javascript" src="js/admin.js"></script>
 </body>
 </html>
