terminado db producto

--- a/admin.html
+++ b/admin.html
@@ -65,9 +65,11 @@
 		</div>
 	</div>
 
-	<div id="Productos" class="container containerPlus" style="position: absolute; top:30px; left: 20px; width:80%; height: 80%; opacity:1" data-drag=true data-resize=false data-collapsable=true data-close=true data-containment="document" data-buttons="fullscreen,close" data-autoresize="false">
+	<div id="Productos" class="container containerPlus" style="position: absolute; top:30px; left: 20px; width:80%; height: 80%; opacity:1" data-drag=true data-resize=true data-collapsable=true data-close=true data-containment="document" data-buttons="fullscreen,close" data-autoresize="false">
 		<h2>Productos</h2>
 		<div class="row">
+			<button onclick="nuevaFilaProducto();">Nuevo Producto</button> 
+			<div style="clear:both;"><br></div>
 			<table >
 				<thead>
 					<tr>
