Principio de carga db de Catalogo

--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
 				<div class="panel-group category-products" id="accordian">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h4 class="panel-title"><a href="#" onclick="openContainer('Catalogo');cargaCatalago();">Catálogo</a></h4>
+							<h4 class="panel-title"><a href="#" onclick="openContainer('Catalogo');cargaCatalogo();">Catálogo</a></h4>
 						</div>
 					</div>
 					<div class="panel panel-default">
