Avanzando la db de Catalago

--- a/admin.html
+++ b/admin.html
@@ -49,6 +49,8 @@
 	<div id="Catalogo" class="container containerPlus" style="position: absolute; top:30px; left: 20px; width:80%; height: 80%; opacity:1" data-drag=true data-resize=false data-collapsable=true data-close=true data-containment="document" data-buttons="fullscreen,close" data-autoresize="false">
 		<h2>Catálogo</h2>
 		<div class="row">
+			<button onclick="nuevaFilaCatalogo();">Nuevo Producto Catalogo</button> 
+			<div style="clear:both;"><br></div>
 			<table >
 				<thead>
 					<tr>
