--- a/admin.html
+++ b/admin.html
@@ -57,7 +57,10 @@
 						<th>Nombre</th>
 						<th>idProducto</th>
 						<th>Precio</th>
-						<th colspan="2">Descripcion</th>
+						<th >Descripcion</th>
+						<th >Categoria</th>
+						<th >Marca</th>
+						<th colspan="2">Destacado</th>
 					</tr>
 				</thead>
 				<tbody id="bodyTableCatalogo">
@@ -115,19 +118,19 @@
 	<div id="Proveedores" class="container containerPlus" style="position: absolute; top:30px; left: 20px; width:80%; height: 100%; opacity:1" data-drag=true data-resize=true data-collapsable=true data-close=true data-containment="document" data-buttons="fullscreen,close" data-autoresize="false">
 		<h2>Proveedores</h2>
 		<div class="row">
+			<button onclick="nuevaFilaProveedor();">Nueva Promocion</button> 
+			<div style="clear:both;"><br></div>
 			<table >
 				<thead>
 					<tr>
 						<th>Nombre</th>
-						<th>idProducto</th>
-						<th>idProveedor</th>
-						<th>Coste</th>
-						<th>Cantidad</th>
-						<th>Cantidad min</th>
-						<th colspan="2">Cantidad suplir</th>
+						<th>Correo</th>
+						<th>CIF</th>
+						<th>Telefono</th>
+						<th>Direccion</th>
 					</tr>
 				</thead>
-				<tbody id="bodyTableProducto">
+				<tbody id="bodyTableProveedores">
 					
 				</tbody>
 			</table>
