Hecho toda la parte de mostrar los productos

--- a/admin.html
+++ b/admin.html
@@ -65,7 +65,8 @@
 						<th >Descripcion</th>
 						<th >Categoria</th>
 						<th >Marca</th>
-						<th colspan="2">Destacado</th>
+						<th >Destacado</th>
+						<th >src</th>
 					</tr>
 				</thead>
 				<tbody id="bodyTableCatalogo">
@@ -89,7 +90,7 @@
 						<th>Coste</th>
 						<th>Cantidad</th>
 						<th>Cantidad min</th>
-						<th colspan="2">Cantidad suplir</th>
+						<th >Cantidad suplir</th>
 					</tr>
 				</thead>
 				<tbody id="bodyTableProducto">
@@ -110,7 +111,7 @@
 						<th>Descuento</th>
 						<th>idCatalogo</th>
 						<th>Fecha Inicio</th>
-						<th colspan="2">Fecha Fin</th>
+						<th >Fecha Fin</th>
 					</tr>
 				</thead>
 				<tbody id="bodyTablePromocion">
